Bug 462076 - Task Switcher Preview opens in wrong location
Summary: Task Switcher Preview opens in wrong location
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwintabbox (other bugs)
Version First Reported In: 5.26.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, wayland-only
: 502965 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-20 21:25 UTC by indecisiveautomator
Modified: 2025-04-18 17:44 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description indecisiveautomator 2022-11-20 21:25:03 UTC
SUMMARY
In the System Settings "Task Switcher" menu, under the "Window Management" category, the preview button which opens the selected Task Switcher type opens it in the wrong location. It opens it in the top-left corner of my center display,

Here is a screenshot that shows the issue: https://i.imgur.com/DwkVQRf.png

STEPS TO REPRODUCE
1. Open the System Settings
2. Navigate to the Window Management section and then the Task Switcher submenu
3. Press the Preview button 
4. The preview of the Task Switcher appears in the incorrect location

OBSERVED RESULT
The Task Switcher preview opens in the top-left corner of my center display, no matter which display the System Settings window is on.

EXPECTED RESULT
The Task Switcher should appear around the center of the display. Any display would be fine, but in my opinion the center of the display that the System Settings window is on would be the most intuitive. In the case where it is between displays, the window where the mouse cursor is mostly on would be the most intuitive. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.0.8-zen1-1-zen (64bit)
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Have not tested X11
Comment 1 Nate Graham 2022-11-29 22:44:11 UTC
If I recall, you have a crazy mixed-DPI multi-monitor setup, right? If so, can you:
1. See if the bug happens with only a single monitor
2. Attach a screenshot of how the Display Configuration page in System Settings looks for you

Thanks!
Comment 2 indecisiveautomator 2022-11-30 14:15:28 UTC
Haha you are right, I do have the crazy setup. I'm surprised you remembered!

I tested with only one display powered on and it still happens. When I only have my primary monitor turned on, the task switcher preview appears in the top left corner, though it appears much further up than in my original screenshot. With only my primary display turned on, it appears in the top left corner "centered", as in I can only see the bottom half and bottom right of the preview.

I tested again with only one of my 1080p screens turned on, and the task switcher didn't appear. The system settings window lost focus when I pressed the button for the preview, so I knew *something* had happened. I powered my primary display back on and I could see the task switcher on my primary display in the same position as when I tested with only my primary display turned on.

I also pulled out my laptop, which is runs Plasma Wayland with only a single display and no scaling, and the task switcher appeared normally - in the center of the screen.

Screenshot of display arrangement: https://i.imgur.com/vVo0f1A.png

So it would appear that this issue is related to multi-monitor setups, or possibly more specifically, my setup. It has caused some similar issues in the past (Bug 448562) and has had other glitches, so I wouldn't be surprised to find out that this - very minor! - issue is related.

I should've mentioned in my OP, but the Alt+Click / Meta+Click shortcut to grab and drag windows works just fine to move the task switcher preview too. So even though it appears off-centered, it can still be moved. In the test case where I had my primary display off, I did try to drag around and bring the task switcher over, but either it wasn't there or I just couldn't grab it. I did try out of curiosity though!

Just to mention:
- On my PC, while my initial issue was tested against 5.26.3, I tested this today with Plasma 5.26.4. On my laptop I tested with 5.26.2, then updated and tried again with 5.26.4.
- On my PC the issue was present on 5.26.3 and 5.26.4, on my laptop it was not present on 5.26.2 or 5.26.4. This is another part of why I suspect it's a multi-monitor / mixed-DPI / just my setup :)
Comment 3 Doug 2024-01-08 23:11:33 UTC
This bug is still alive and well on Plasma 6 Beta 2

Operating System: KDE Neon Unstable
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Comment 4 Corey 2024-01-27 21:35:51 UTC
Can confirm this bug in Plasma 6 RC1. I have a simple dual-monitor setup, and the preview appears in the top left of my second display.

Arch Linux - Kernel 6.7.1
Plasma 6 RC1 5.92.0
KDE Frameworks 5.248.0
QT 6.7.0 Beta 1
Wayland & Intel Integrated Graphics
System updated today
Comment 5 Nate Graham 2024-01-29 19:18:42 UTC
Can also reproduce with a simple dual-monitor setup. It affects OSDs for volume, brightness etc. as well for me. That might be a different bug though.

Regardless, both reproduce for me after restarting plasmashell or kwin_wayland.
Comment 6 Nate Graham 2024-02-23 20:53:49 UTC
The OSD issue is now fixed for me, but this bug remains.
Comment 7 Bug Janitor Service 2025-04-17 21:03:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7529
Comment 8 Ismael Asensio 2025-04-18 09:47:38 UTC
Git commit 6ee60bc8db757374ffedf3c892de7b9129965cfa by Ismael Asensio.
Committed on 18/04/2025 at 09:11.
Pushed by iasensio into branch 'master'.

kcms/tabbox: Split the tabbox preview as a helper executable

This way we can set the specific environment variable that allows the
PlasmaDialog to position itself (QT_WAYLAND_DISABLE_FIXED_POSITIONS=1)
without messing with the application that runs the KCM

As added benefits: the preview QML/Plasma engine gets decoupled from
the QWidgets KCM (also useful in an eventual port of the KCM), and
the executable can be used to debug tabbox switchers

It also fixes an edge case where closing the KCM with a tabbox preview
open would leave the preview window still open until losing focus
FIXED-IN: 6.4

M  +1    -0    src/config-kwin.h.cmake
M  +11   -3    src/kcms/tabbox/CMakeLists.txt
M  +49   -6    src/kcms/tabbox/layoutpreview.cpp
M  +1    -0    src/kcms/tabbox/layoutpreview.h
M  +36   -6    src/kcms/tabbox/main.cpp
M  +4    -0    src/kcms/tabbox/main.h

https://invent.kde.org/plasma/kwin/-/commit/6ee60bc8db757374ffedf3c892de7b9129965cfa
Comment 9 Nate Graham 2025-04-18 17:44:04 UTC
*** Bug 502965 has been marked as a duplicate of this bug. ***