kcms/tabbox: Split the tabbox preview as a helper executable

This way we can set the specific environment variable that allows the
PlasmaDialog to position itself (QT_WAYLAND_DISABLE_FIXED_POSITIONS=1)
without messing with the application that runs the KCM

As added benefits: the preview QML/Plasma engine gets decoupled from
the QWidgets KCM (also useful in an eventual port of the KCM), and
the executable can be used to debug tabbox switchers

It also fixes an edge case where closing the KCM with a tabbox preview
open would leave the preview window still open until losing focus

BUG: 462076
FIXED-IN: 6.4