src/kcms/tabbox/layoutpreview.h
@@ -30,6 +30,7 @@ public:
     ~LayoutPreview() override;
 
     bool eventFilter(QObject *object, QEvent *event) override;
+    bool isLoaded() const;
 
 private:
     SwitcherItem *m_item;
