src/kcms/tabbox/main.h
@@ -16,6 +16,8 @@
 #include <kcmodule.h>
 #include <ksharedconfig.h>
 
+class QProcess;
+
 namespace KWin
 {
 class KWinTabBoxConfigForm;
@@ -53,6 +55,8 @@ private:
     KSharedConfigPtr m_config;
 
     TabBox::KWinTabboxData *m_data;
+
+    std::unique_ptr<QProcess> m_previewProcess;
 };
 
 } // namespace
